added psychic game to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,9 @@ header {
        word-spacing: 5px;
 }
 
-a:hover  {
+#about:hover,
+#contact:hover,
+#portfolio:hover {
     background-color: maroon ;
     padding-top: 17px;
     padding-bottom:17px;
@@ -51,7 +53,7 @@ a:hover  {
     padding-right: 2px;
 }
 
-a:active {
+ {
     background-color: darkgray;
 }
 
@@ -61,8 +63,26 @@ h1 {
     color: white;
 }
 
+#project-link {
+    text-decoration: none;
+    color: black;
+
+}
+
+#project-link:hover  {
+    
+    text-decoration: underline;
+   
+}
+
+#project-link:active {
+    background-color: darkgray;
+}
+
 /* nav links */
-a {
+#about,
+#contact,
+#portfolio {
     text-decoration: none;
     font-size: 20px;
     color: lightgray;
@@ -70,6 +90,17 @@ a {
     text-align: right;
 
 }
+
+.work {
+  position: relative;
+  
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+
 
 /* main section (content) on all pages */
 #main-section {
@@ -125,8 +156,9 @@ input, textarea{
     margin-top: 15px;
 }
 
-h3 {
+#project-link{
     font-size: 20px;
+    text-decoration: none;
 }
 
 #submit {
@@ -163,13 +195,6 @@ h3 {
     border: 4px solid lightgray;
 }
 
-#portimg:hover {
-    opacity: 0.8;
-}
-
-#portimg:active {
-    opacity: 0.7;
-}
 
 
 
